# Orion

./: .gitignore  .pre-commit-config.yaml  Orion_Roadmap.md  README.md  debug_examples.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_new.py  set_dependencies.py  setup.cfg  start_server_test.py  test_run_imports.py
.github/workflows/: ci.yml
Test_Ingest/: README.md  Text.txt  algorithms.cpp  api_config.yaml  config_sample.json  database_schema.xml  employee_data.csv  machine_learning_basics.md  react_component.jsx  sample_text.txt  vector_operations.py  webpage_sample.html
app/: __init__.py  async_processing.py  caching.py  chat.py  chunking.py  config.py  context_resolver.py  conversation_memory.py  document_intelligence.py  incremental_updates.py  ingest.py  llm.py  main.py  media_config.py  media_processing.py  query.py  query_enhancement.py  query_processor.py  temp_cleanup.py  utils.py
backend/: __init__.py  app.py  dependencies.py  main.py
backend/api/: chat.py  ingest.py  ingestion.py  models.py  query.py  settings.py  system.py  transcription.py
backend/models/: __init__.py  chat.py  ingest.py  ingestion.py  models.py  query.py  rag.py  settings.py  system.py
backend/services/: __init__.py  config_service.py  gpu_manager.py  ingest_service.py  port_manager.py  query_service.py  system_service.py
backend/websockets/: chat.py
core/processing/: __init__.py  async_processing.py  chunking.py  document_intelligence.py  incremental_updates.py  media_processing.py
core/rag/: __init__.py  chat.py  context_resolver.py  conversation_memory.py  ingest.py  llm.py  query.py  query_enhancement.py  query_processor.py
core/utilities/: config.py  utils.py
core/utils/: __init__.py  caching.py  config.py  media_config.py  orion_utils.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/lib/: api.ts
frontend/src/lib/components/: NavMenu.svelte  Navigation.svelte
frontend/src/lib/components/chat/: ChatMessage.svelte  ChatWindow.svelte
frontend/src/lib/stores/: chat.ts  documents.ts  system.ts
frontend/src/lib/types/: api.ts
frontend/src/lib/utils/: api.ts  chatAPI.ts  websocketChat.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/conversation/[id]/: +page.svelte  +page.ts
frontend/src/routes/models/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/settings/application/: +page.svelte
frontend/src/routes/settings/ingestion/: +page.svelte
frontend/src/routes/settings/rag/: +page.svelte
frontend/src/routes/upload/: +page.svelte
src/core/: ingest.py  llm.py
src/generation/: __init__.py  context_preparer.py  generate.py  prompt_builder.py  query_classifier.py  session_manager.py
src/retrieval/: embeddings.py  reranker.py  retriever.py  search.py  vector_store.py  watchdog.py
src/utilities/: config.py  file_parser.py  utils.py  whisper_manager.py
system_tray/: __init__.py  main.py  service.py
tests/: conftest.py  test_backend_basic.py  test_chunking.py  test_config.py  test_conversation_memory.py  test_document_intelligence.py  test_enhanced_ingest.py  test_ingest.py  test_llm.py  test_main.py  test_media_processing.py  test_query.py
