[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Orion"
version = "0.1.0"
description = "A local multi-user Personal Knowledge RAG using Ollama"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core RAG & LLM
    "ollama",
    "chardet",
    "rank_bm25",
    "langchain",
    "langchain-community", 
    "langchain-ollama",
    "langchain-text-splitters",
    "sentence-transformers",
    "chromadb",
    "transformers",
    "torch>=2.7.1",
    "torchvision>=0.22.0",
    
    # Document processing
    "pandas",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "pymupdf",
    "pillow",
    
    # FastAPI Backend
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    
    # System integration
    "pystray",
    "psutil",
    
    # Utilities
    "tqdm",
    "typer",
    "rich",
    "requests"
]

[[project.authors]]
name = "Ralf Hernandez"
email = "ralf_hernandez@dlsu.edu.ph"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "black",
    "ruff", 
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pre-commit"
]
media = [
    "easyocr",
    "pytesseract", 
    "camelot-py[cv]",
    "tabula-py"
]

[tool.black]
line-length = 128
target-version = ['py312']

[tool.ruff]
line-length = 128
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "test/",
    "frontend/"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
    "--disable-warnings"
]

norecursedirs = [".git", ".venv", "__pycache__", "build", "dist", "*.egg", "frontend"]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*Using extra keyword arguments on.*Field.*:DeprecationWarning"
]

markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests that are integrated (slow)",
    "requires_ollama: marks tests that require Ollama to be running"
]
