[metadata]
name = Orion
description = A local multi-user Personal Knowledge RAG using Ollama

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --tb=short --strict-markers -v
markers =
    unit: marks tests as unit tests
    integration: marks tests as integration tests
    slow: marks tests as slow running tests

[flake8]
max-line-length = 128
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv

[isort]
profile = black
multi_line_output = 3
line_length = 128